# lgtv-service

./: Cargo.toml  README.md  config.example.toml
.github/workflows/: release.yml
src/: config.rs  logging.rs  main.rs  pairing.rs  power.rs  probe.rs  service.rs  state.rs
src/tv/: mod.rs  websocket.rs  wol.rs
